data/derived/sp14/progs/unify/prog4522.ml.out
Characters 191-195:
  let (_, res) = List.fold_left f base args in
                                       ^^^^
Error: This expression has type (('a list -> ('b * 'a) list) * 'c) list
       but an expression was expected of type 'd list list
       Type ('a list -> ('b * 'a) list) * 'c is not compatible with type
         'd list 
